msg/DispatchQueue: clear queue after wait()

We can have a sequence like

 - put several things in mqueue
 - call stop(), which makes thread exit without processing all items
 - wait() waits for thread to exit

...and have items left in the queue.  Throw them out on wait() (which is
called post-shutdown()).

Fixes: http://tracker.ceph.com/issues/18351
Signed-off-by: Sage Weil <sage@redhat.com>